# rust-parallel

./: Cargo.toml  README.md
src/: lib.rs  pack.rs  prefix.rs  utils.rs
