[package]
name = "parallel"
version = "0.0.0"
authors = ["Ethan <ethan8@cs.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num_cpus = "1.0"

[profile.dev]
opt-level = 3
overflow-checks = false
